--- a/styling_for_KH_website.css
+++ b/styling_for_KH_website.css
@@ -24,6 +24,9 @@ body {
     justify-content: center;
     align-items: center;
 }
+#header .fa-solid {
+    display: none;    /* Its for mobile screen sizes */
+}
 #namedLogo {
     cursor: default;
 }
@@ -80,7 +83,9 @@ body {
     letter-spacing: 2px;
     line-height: 1.3;
 }
-
+.posterImgForMobiles {
+    display: none;
+}
 .aboutMeWriteup h1 {
     margin: 0;
 }
@@ -414,4 +419,122 @@ body {
 .khh {
     margin-bottom: 0;
     cursor: grab;
+}
+
+
+/* ######################################################### css for mobiles ######################################################### */
+
+@media only screen and (max-width: 600px) {
+    /* ######################################## Header section ########################################*/
+    .show {
+        display: block !important;
+    }
+    #header {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    #namedLogo {
+        position: relative;
+        left: 20px;
+    }
+    .navItems {
+        background-color: maroon;
+        border-radius: 10px;
+        margin: 4px;
+    }
+    .navItems a {
+        display: none;
+        margin: 10px 8px;
+        font-size: smaller;
+    }
+    .fa-xmark {
+        position: relative;
+        top: 16px;
+        /* right: 4px; */
+        left: 3px;
+    }
+    .fa-xmark:hover {
+        cursor: pointer;
+    }
+    .fa-bars {
+        position: relative;
+        right: 20px;
+    }
+    .fa-bars:hover {
+        transform: scale(1.3);
+    }
+    /* ######################################## My Intro Section ######################################## */
+    .myPoster {
+        display: none;
+    }
+    .aboutMeWriteup {
+        width: 100%;
+        font-size: smaller;
+        display: flex;
+        justify-content: space-between;
+    }
+    .aboutMeWriteup h1 {
+        width: 30%;
+    }
+    .aboutMeWriteup p {
+        display: none;
+    }
+    .posterImgForMobiles {
+        display: inline;
+        height: 95%;
+        width: 100%;
+        position: relative;
+        bottom: 30px;
+        border-radius: 40px;
+    }
+
+    /* ######################################## About Me Section ######################################## */
+    #aboutMeContainer {
+        display: inline;
+    }
+    .myDp {
+        position: relative;
+        left: 100px;
+    }
+    .aboutMeDetails {
+        padding: 20px;
+    }
+    
+    /* ######################################## Blog Section ######################################## */
+
+    #blogTopic {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .blogHeading {
+        height: 220px;
+        width: 110px;
+        border-top-left-radius: 110px;
+        border-bottom-left-radius: 110px;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        /* background-color: red;
+        opacity: 0.6; */
+        background: rgba(245, 5, 5, 0.4);
+        display: flex;
+        align-items: center;
+        font-family: 'Libre Baskerville', serif;
+    }
+
+    .blogIntro {
+        position: static;
+        width: 70%;
+        margin-left: 10px;
+    }
+
+    /* ######################################## Contact Section ######################################## */
+
+
+    .requestToFollow {
+        text-align: center;
+    }
+
 }
