--- a/styling_for_KH_website.css
+++ b/styling_for_KH_website.css
@@ -480,11 +480,12 @@ body {
         margin: 4px;
         position: relative;
         right: 15px;
+        width: 60%;
     }
 
     .navItems a {
         display: none;
-        margin: 10px 8px;
+        margin: 10px 4px;
         font-size: smaller;
     }
 
