--- a/styling_for_KH_website.css
+++ b/styling_for_KH_website.css
@@ -477,10 +477,13 @@ body {
     .navItems {
         background-color: maroon;
         border-radius: 10px;
-        margin: 4px;
+        /* margin: 4px;
         position: relative;
         right: 15px;
-        width: 60%;
+        width: 60%; */
+        width: 100px;
+        display: flex;
+        flex-direction: column;
     }
 
     .navItems a {
@@ -490,10 +493,9 @@ body {
     }
 
     .fa-xmark {
-        position: relative;
-        top: 16px;
-        /* right: 4px; */
-        left: 3px;
+        position: fixed;
+        top: 20px;
+        right: 8px;
     }
 
     .fa-xmark:hover {
