repositioned the last updated element.
repositioned the last updated element, to the top portion of the paraDiv for desktops and in the mid for mobiles!

--- a/styling_for_KH_website.css
+++ b/styling_for_KH_website.css
@@ -377,7 +377,7 @@ body {
 #lastUpdated {
     opacity: 0.4;
     position: relative;
-    top: 10px;
+    top: -10px;
     left: 10px;
 }
 
@@ -626,6 +626,12 @@ body {
 
     .paraDiv {
         width: 95%;
+    }
+    #lastUpdated {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        left: 0;
     }
 
     /* ######################################## Contact Section ######################################## */
