--- a/styling_for_KH_website.css
+++ b/styling_for_KH_website.css
@@ -93,6 +93,10 @@ p {
     line-height: 1.3;
 }
 
+#GreetingsForMobiles {
+    display: none;
+}
+
 .posterImgForMobiles {
     display: none;
 }
@@ -116,28 +120,63 @@ p {
     flex-direction: column;
     align-items: center;
     margin: 40px 0 40px;
-    transform: scale(1.2);
+    /* transform: scale(1.2); */
 }
 
 #aboutMeContainerDpAndWriteup {
     display: flex;
     justify-content: center;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px 5px rgba(255, 0, 0, 0.8);
+    margin: 0 15px;
 }
+
+/* For the horizontal Rule (hr) */
+
+hr {
+    margin: 1.5em 0;
+    text-align: center;
+    border: none;
+}
+
+hr:before {
+    content: '';
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background: #eee;
+    margin: 0 0.4em;
+}
+
+hr:after {
+    content: '';
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background: #eee;
+    margin: 0 0.4em;
+}
+
+/* Hr code over */
 
 #aboutMeContainerWriteup {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     width: 50%;
+    padding-bottom: 15px;
 }
 
 .myDp {
     object-fit: cover;
     height: 300px;
-    margin: 20px;
+    /* margin: 20px; */
+    margin-bottom: 30px;
     border-radius: 30px;
-    position: relative;
-    bottom: 30px;
+    /* position: relative;
+    bottom: 40px; */
     transform: scale(0.9);
 
 }
@@ -146,12 +185,18 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     width: 50%;
 }
 
+
 .aboutMeDetails h1 {
     font-family: 'Libre Baskerville', serif;
+}
+
+.aboutMeDetails h3 {
+    font-family: 'Libre Baskerville', serif;
+    text-align: center;
 }
 
 .aboutMeDetails p {
@@ -210,28 +255,35 @@ p {
     margin-top: 10px;
 }
 
+
+
 /* #####################################################################  Portfolio portion ##################################################################### */
 #myWork {
     font-family: 'Libre Baskerville', serif;
     display: flex;
     justify-content: center;
-    margin-top: 120px;
+    /* margin-top: 200px; */
 }
 
-.myPortfolioContainer {
+.myPortfolioContainerLaptops {
     margin: 40px 0 40px;
     width: 100%;
     /* display: flex;
-    justify-content: center;
-    flex-wrap: wrap; */
+    flex-direction: column;
+    justify-content: center; */
+    flex-wrap: wrap;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 3fr));
 }
 
-.myPortfolioContainer img {
+.myPortfolioContainerMobiles {
+    display: none;
+}
+
+.myPortfolioContainerLaptops img {
     object-fit: cover;
-    width: 250px;
-    height: 300px;
+    width: 300px;
+    height: 350px;
     padding: 20px;
     border-radius: 40px;
     transition: transform 0.5s;
@@ -257,8 +309,8 @@ p {
 }
 
 .layer {
-    width: 250px;
-    height: 321px;
+    width: 300px;
+    height: 371px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -340,7 +392,7 @@ p {
 #blogTopic {
     display: flex;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 30px;
 }
 
 .blogIntro {
@@ -404,7 +456,7 @@ p {
     appearance: none;
     height: 5px;
     border-radius: 5px;
-    background-color: aquamarine;
+    background-color: rgb(241, 38, 45);
     /* position: relative;
     top: 7px; */
     /* transition: value 2s; */
@@ -417,13 +469,13 @@ p {
     margin: 10px;
     padding: 10px;
     width: 70%;
-    background: linear-gradient(to bottom, rgba(0,0,0,0.05), #0a85e3);
+    background: linear-gradient(to bottom, rgba(0,0,0,0.05), red);
     border-radius: 20px;
     box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.1), -5px -5px 5px black;
 }
 
 .sliderButtons {
-    background-color: aqua;
+    background-color: rgb(255, 115, 0);
     opacity: 0.6;
     border-radius: 8px;
     font-weight: bolder;
@@ -474,6 +526,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 40px;
 }
 
 .contact-me {
@@ -592,14 +645,36 @@ p {
     .myPoster {
         display: none;
     }
-    
+    #GreetingsForLaptop {
+        display: none;
+    }
+
+    #GreetingsForMobiles {
+        display: block;
+        width: 100%;
+        /* display: flex; */
+        /* flex-wrap: wrap; */
+        /* justify-content: center; */
+        text-align: center;
+        padding: 20px;
+
+    }
     .aboutMeWriteup {
-        /* width: 100%; */
         font-size: smaller;
         display: flex;
         justify-content: center;
     }
 
+    .aboutMeTabs {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+    }
+
+    .aboutMeTabs p {
+        margin: auto;
+    }
+    
     .aboutMeWriteup h1 {
         width: 65%;
     }
@@ -626,6 +701,8 @@ p {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 25px;
+        padding-bottom: 20px;
     }
     #aboutMeContainerWriteup {
         display: flex;
@@ -646,7 +723,8 @@ p {
     }
 
     .aboutMeDetails {
-        padding: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
         width: 95%;
     }
 
@@ -657,10 +735,72 @@ p {
 
     /* ######################################## Portfolio Section ######################################## */
 
-    .myPortfolioContainer {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
+    .myPortfolioContainerLaptops {
+        /* display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 3fr)); */
+        display: none;
     }
+
+    .myPortfolioContainerMobiles {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .workMobiles {
+        display: flex;
+        padding: 10px;
+        justify-content: center;
+        background-color: rgba(128, 0, 0, 0.4);
+        border-radius: 40px;
+        margin: 10px;
+    }
+
+    .numberingWorkMobiles {
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        background-color: #C04848;
+        padding: 5px;
+        border-radius: 10px;
+    }
+
+    .myPortfolioContainerMobilesParaDiv {
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .myPortfolioContainerMobilesParaDiv p {
+        text-align: center;
+        font-size: smaller;
+        font-style: italic;
+    }
+
+    .myPortfolioContainerMobilesParaDiv h3 {
+        text-align: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .myPortfolioContainerMobilesImgLink {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .myPortfolioContainerMobiles img {
+        object-fit: cover;
+            width: 150px;
+            height: 170px;
+            padding: 20px;
+            border-radius: 40px;
+    }
+
+    .centering {
+        display: none;
+    }
+
+
 
     /* ######################################## Blog Section ######################################## */
     .blogMainContainer {
