Fixed the Tailwind logo in Mobile view
Fixed the Tailwind logo in Mobile view! Added a picture instead of SVG in the mobile view

--- a/styling_for_KH_website.css
+++ b/styling_for_KH_website.css
@@ -762,6 +762,14 @@ hr:after {
         border-radius: 10px;
     }
 
+    .tailwindCSSpngForMobiles {
+        height: 35px !important;
+        width: 35px !important;
+        padding: 0 !important;
+        position: relative;
+        top: 10px;
+    }
+
     .myPortfolioContainerMobilesParaDiv {
         width: 60%;
         display: flex;
