--- a/styling_for_KH_website.css
+++ b/styling_for_KH_website.css
@@ -129,6 +129,7 @@ p {
     border: 1px solid #ccc;
     box-shadow: 0 0 10px 5px rgba(255, 0, 0, 0.8);
     margin: 0 15px;
+    width: 60%;
 }
 
 /* For the horizontal Rule (hr) */
