--- a/styling_for_KH_website.css
+++ b/styling_for_KH_website.css
@@ -124,13 +124,27 @@ p {
 }
 
 #aboutMeContainerDpAndWriteup {
+    width: 50%;
+}
+
+#wrapperDivWrappingDpAndWriteup {
     display: flex;
     justify-content: center;
     border: 1px solid #ccc;
     box-shadow: 0 0 10px 5px rgba(255, 0, 0, 0.8);
     margin: 0 15px;
-    width: 60%;
+    /* width: 60%; */
 }
+
+#aboutMeContainerWriteup {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* padding-bottom: 15px; */
+    padding-right: 10px;
+
+}
+
 
 /* For the horizontal Rule (hr) */
 
@@ -161,15 +175,6 @@ hr:after {
 }
 
 /* Hr code over */
-
-#aboutMeContainerWriteup {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 50%;
-    padding-bottom: 15px;
-}
-
 
 .myDp {
     object-fit: cover;
@@ -597,6 +602,8 @@ hr:after {
     }
     body {
         overflow-x: hidden;
+        position: relative;
+        left: 10px;
     }
 
     #header {
@@ -666,7 +673,8 @@ hr:after {
         padding: 20px;
 
     }
-    .aboutMeWriteup {
+    /* aboutMeWriteup is for the top section */
+    .aboutMeWriteup { 
         font-size: smaller;
         display: flex;
         justify-content: center;
@@ -705,6 +713,9 @@ hr:after {
         display: inline;
     }
     #aboutMeContainerDpAndWriteup {
+        width: 100%;
+    }
+    #wrapperDivWrappingDpAndWriteup {
         display: flex;
         flex-direction: column;
         align-items: center;
